model NotificationToken {
  id        Int       @id @default(autoincrement())
  userId    String    @default(uuid()) @map("user_id")
  type      String    @db.VarChar(50)
  token     String    @db.VarChar(255)
  createdAt DateTime? @default(now()) @map("created_at") @db.Timestamp(6)
  updatedAt DateTime? @updatedAt @map("updated_at") @db.Timestamp(6)
  user      User      @relation(fields: [userId], references: [id])

  @@map("notification_tokens")
}

model Notification {
  id             Int       @id @default(autoincrement())
  service        String    @db.VarChar(100)
  type           String    @db.VarChar(255)
  notifiableType String    @map("notifiable_type") @db.VarChar(255)
  notifiableId   String    @map("notifiable_id") @db.VarChar(255)
  data           Json
  sentAt         DateTime? @map("sent_at")
  readAt         DateTime? @map("read_at")
  createdAt      DateTime? @default(now()) @map("created_at") @db.Timestamp(6)
  updatedAt      DateTime? @updatedAt @map("updated_at") @db.Timestamp(6)

  @@index([notifiableId, notifiableType])
  @@map("notifications")
}
